# VideoSub

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
electron-app/: download.js  index.html  local.html  local.js  main.js  package-lock.json  package.json  preload-local.js  preload.js  renderer.js  shared.js  style.css  subtitles.js  transcribe.js  translation.js
