[project]
name = "videosub"
version = "0.1.0"
description = "Video download + Whisper transcription + DeepSeek translation — all-in-one desktop tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "openai-whisper>=20250625",
]
